syntax = "proto3";
package messages;
option go_package = "agentske/proto";
import "actor.proto";

message Data {
    repeated double labels = 2;
    repeated Histogram histograms = 3;
}

message Histogram {
    repeated double values = 1;
}

message DataSets{
    Data Training = 1;
    Data Validation = 2;
}

message ActivatePreproc{
    actor.PID Sender = 1; 
}


message ActivateLocalTraining{
    actor.PID Sender = 1;
    actor.PID AggregationActor = 2;
}

message GetTrainingActor{
}

message GetGlobalWeights{
}

message GlobalWeights{
    repeated Biases biases = 1;
    repeated Weights weights = 2;
}

message GlobalWeightsTest{
    string string = 1;
}

message Biases{
    repeated double data = 1;
}

message Weights{
    repeated double data = 1;
}

message GetAggregationActor {

}

message GradientUpdate {
    repeated WeightLayer weights = 1;
}

message WeightLayer {
    repeated double weights = 1;
    repeated double biases = 2;
}